--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="center col-md-8">
 		<h1 id="top">RunPal</h1>
 			<h3>Let's run together</h3>
-				<p>RunPal is a project aiming at exploring how to utilise run data in a new way. The focus is on the the social experience running can be and how to help people to experience that.</p>
+				<p>RunPal is a project aiming at exploring how to utilise run data in a new way. The focus is on the social experience running can be and how to help people to experience that.</p>
 			<h3>Participate in the research</h3>
 				<p>As part of the research I'm hoping to collect a lot of run data. The reason this data is interesting for me is that I want to discover patterns and habits for runners. As I believe knowing this can helt determine how to helt people engage in social running.</p>
 				<p>You can participate in my research by sharing your run data with me. I'm interested in data from runners of all kind no matter if you hit the streets or trails everyday in your flash gear or if running is something of a coincidence for you. I will of course keep all your data totally anonymous and not share it with anyone, this is only for test purposes.</p>
