--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 					<li><a href="#nike">Submit data from Nike+</a></li>
 					<li><a href="#rungap">Submit data from Endmomondo and several other services</a></li>
 				</ul>
-				<p style="font-weight:bold">After exporting your data with the help of the guides, please .zip your data folder an upload using the upload form below</p>
+				<p style="font-weight:bold">After exporting your data with the help of the guides, please upload using the upload form below.</p>
 				<div id="upload">	
 					<form action="upload_file.php" method="post"
 					enctype="multipart/form-data" target="_blank">
 					<label for="file">Locate file</label>
-					<input type="file" name="file" id="file"><br>
+					<input type="file" name="upload[]" multiple="multiple" accept="file/tcx, file/gpx, file/zip"><br>
 					<input type="submit" name="submit" value="Submit">
 					</form>
 				</div>	
@@ -35,18 +35,18 @@
 				<h4 id="tapiriik">Submit from RunKeeper, Garmin Connect and more</h4>
 				<a href="https://tapiriik.com/" target="_blank"><img src="assets/tapirik.jpg" class="img-responsive" alt="Responsive Image"></a>
 				<p>Tapiriik lets you sync your data between Runkeeper, Strava, Garmin Connect, SportsTracks, Training Peaks and Dropbox. So for easily sharing your run data with me, go to <a href="https://tapiriik.com/" target="_blank">Tapiriik</a> and sync your prefered service to your dropbox account. Tapiriik will then make a folder in your Apps folder in your dropbox account containing all your data from your choosen service.<a href="https://tapiriik.com/" target="_blank"><img src="assets/tapirik_dropbox.jpg" class="img-responsive" alt="Responsive Image"></a>
-				<p>The content in this folder is what I'm after. Please zip and <a href="#upload">upload your upload file</a>.</p>
+				<p>The content in this folder is what I'm after. <a href="#upload">Upload your upload files</a>. If it's not possible to choose several files (IE) please zip and upload that .zip file.</p>
 			</div>
 			<div class="option2 col-md-12">	
 				<h4 id="nike">Submit from Nike+</h4>
-				<p>To bulk export from Nike+ it's possibly to use the <a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank">Nike+ Data Exporter</a> developed by <a href="https://twitter.com/mccaig">@mccaig</a>. You log-in with your normal Nike+ ID and it retrieves you Nike+ Data. 
+				<p>To bulk export from Nike+ it's possibly to use the <a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank">Nike+ Data Exporter</a> developed by <a href="https://twitter.com/mccaig">@mccaig</a>. You log-in with your normal Nike+ ID and it retrieves your Nike+ Data. 
 				<a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank"><img src="assets/nike1.jpg" class="img-responsive" alt="Responsive Image"></a>	
-				You then select all and scroll to the bottom to click download. Please choose the .tcx file format, zip and <a href="#upload">upload your file</a>.</p>
+				You then select all and scroll to the bottom to click download. Please choose the .tcx file format and download.  <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (if you're using IE) please zip and upload that .zip file.</p>
 				<a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank"><img src="assets/nike2.jpg" class="img-responsive" alt="Responsive Image"></a>
 			</div>
 			<div class="option3 col-md-12">
 				<h4 id="rungap">Submit from Endomondo and several other services</h4>
-				<p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. Please zip and <a href="#upload">upload your file</a>.</p>
+				<p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. <a href="#upload">Upload your upload files</a>. If it's not possible to choose several files (IE) please zip and upload that .zip file.</p>
 				<a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="_blank"><img src="assets/rungap.jpg" class="img-responsive" alt="Responsive Image"></a>
 			</div>
 			<br>
