--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<h3>Let's run together</h3>
 				<p>RunPal is a project aiming at exploring how to utilise run data in a new way. The focus is on the social experience running can be and how to help people to experience that.</p>
 			<h3>Participate in the research</h3>
-				<p>As part of the research I'm hoping to collect a lot of run data. The reason this data is interesting for me is that I want to discover patterns and habits for runners. As I believe knowing this can helt determine how to helt people engage in social running.</p>
-				<p>You can participate in my research by sharing your run data with me. I'm interested in data from runners of all kind no matter if you hit the streets or trails everyday in your flash gear or if running is something of a coincidence for you. I will of course keep all your data totally anonymous and not share it with anyone, this is only for test purposes.</p>
-				<p>Now there's tons of services out there that lets you track your runs, but exporting that data demands a little bit of work. I've included guides to the most popular services here. If you should have any questions abouth any of the methods don't hestitate to <a href="mailto:sprint@runpal.org">contact me</a>.
+				<p>As part of the research I'm hoping to collect a lot of run data. The reason this data is interesting for me is that I want to discover patterns and habits for runners, as I believe knowing this can help determine how to help people engage in social running.</p>
+				<p>You can participate in my research by sharing your run data with me. I'm interested in data from runners of all kind no matter if you hit the streets or trails everyday in your flash gear or if running is somewhat of a coincidence for you. I will of course keep all your data totally anonymous and not share it with anyone, this is only for test purposes.</p>
+				<p>Now there are tons of services out there that lets you track your runs, but exporting that data demands a little bit of work. I've included guides to the most popular services here. If you should have any questions abouth any of the methods don't hestitate to <a href="mailto:sprint@runpal.org">contact me</a>.
 				<ul>
 					<li><a href="#tapiriik">Submit data from RunKeeper, Carmin Connect and more</a></li>
 					<li><a href="#nike">Submit data from Nike+</a></li>
@@ -35,18 +35,18 @@
 				<h4 id="tapiriik">Submit from RunKeeper, Garmin Connect and more</h4>
 				<a href="https://tapiriik.com/" target="_blank"><img src="assets/tapirik.jpg" class="img-responsive" alt="Responsive Image"></a>
 				<p>Tapiriik lets you sync your data between Runkeeper, Strava, Garmin Connect, SportsTracks, Training Peaks and Dropbox. So for easily sharing your run data with me, go to <a href="https://tapiriik.com/" target="_blank">Tapiriik</a> and sync your prefered service to your dropbox account. Tapiriik will then make a folder in your Apps folder in your dropbox account containing all your data from your choosen service.<a href="https://tapiriik.com/" target="_blank"><img src="assets/tapirik_dropbox.jpg" class="img-responsive" alt="Responsive Image"></a>
-				<p>The content in this folder is what I'm after. <a href="#upload">Upload your upload files</a>. If it's not possible to choose several files (IE) please zip and upload that .zip file.</p>
+				<p>The content in this folder is what I'm after. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p>
 			</div>
 			<div class="option2 col-md-12">	
 				<h4 id="nike">Submit from Nike+</h4>
 				<p>To bulk export from Nike+ it's possibly to use the <a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank">Nike+ Data Exporter</a> developed by <a href="https://twitter.com/mccaig">@mccaig</a>. You log-in with your normal Nike+ ID and it retrieves your Nike+ Data. 
 				<a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank"><img src="assets/nike1.jpg" class="img-responsive" alt="Responsive Image"></a>	
-				You then select all and scroll to the bottom to click download. Please choose the .tcx file format and download.  <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (if you're using IE) please zip and upload that .zip file.</p>
+				You then select all and scroll to the bottom to click download. Please choose the .tcx file format and download. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.
 				<a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank"><img src="assets/nike2.jpg" class="img-responsive" alt="Responsive Image"></a>
 			</div>
 			<div class="option3 col-md-12">
 				<h4 id="rungap">Submit from Endomondo and several other services</h4>
-				<p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. <a href="#upload">Upload your upload files</a>. If it's not possible to choose several files (IE) please zip and upload that .zip file.</p>
+				<p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p>
 				<a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="_blank"><img src="assets/rungap.jpg" class="img-responsive" alt="Responsive Image"></a>
 			</div>
 			<br>
