--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<div class="row section option2 col-md-12">		
 			<h3 class="col-md-offset-5" id="nike">Submit from Nike+</h3>
 				<div class="col-md-4 col-md-offset-2">
-					<a href="assets/nike1.jpg" target="_blank"><img src="assets/nike1.jpg" class="img-responsive" alt="Responsive Image"></a><p>To bulk export from Nike+ it's possibly to use the <a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank">Nike+ Data Exporter</a> developed by <a href="https://twitter.com/mccaig">@mccaig</a>. You log-in with your normal Nike+ ID and it retrieves your Nike+ Data.
+					<a href="assets/nike1.jpg" target="_blank"><img src="assets/nike1.jpg" class="img-responsive" alt="Responsive Image"></a><p>To bulk export from Nike+ it's possible to use the <a href="https://nikeplusexporter.rhysmccaig.com/" target="_blank">Nike+ Data Exporter</a> developed by <a href="https://twitter.com/mccaig">@mccaig</a>. You log-in with your normal Nike+ ID and it retrieves your Nike+ Data.
 				</div>	
 				<div class="col-md-4">
 					<a href="assets/nike2.jpg" target="_blank"><img src="assets/nike2.jpg" class="img-responsive" alt="Responsive Image"></a>You then select all and scroll to the bottom to click download. Please choose the .tcx file format and download. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.
