styling and succes for upload

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
 
-<div class="col-md-12 header">	
+<div class="col-md-12 header" id="top">	
 	<div class="col-md-8 center">
 		<div class="header-wrapper">
-			<h1 class="" id="top">RunPal</h1>
+			<h1>RunPal</h1>
 		</div>	
 
 				<h3>Let's run together</h3>
@@ -74,15 +74,14 @@
 </div>	
 <div class="section-wrapper">		
 	<div class="row section option3 col-md-12">
-			<h3 class="col-md-offset-3" id="rungap">Submit from Endomondo and several other services</h3>
-				<div class="col-md-4 col-md-offset-2"><p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p></div>
-				<div class="col-md-4"><a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="_blank"><img src="assets/rungap.jpg" class="img-responsive" alt="Responsive Image"></a></div>
+				<div class="col-md-4 col-md-offset-2"><h3 id="rungap">Submit from Endomondo and several other services</h3><p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p></div>
+				<div class="col-md-4" style="padding-top:5em"><a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="_blank"><img src="assets/rungap.jpg" class="img-responsive" alt="Responsive Image"></a></div>
 			
 	</div>
 </div>	
 	<div class="footer-wrapper col-md-12">
 			
-			<div class="col-md-2 col-md-offset-5" style="margin-top:80px"><a href="#top"><p><input type="submit" value="Go to top" class="green-sea-flat-button footer-button round-corners"></a>
+			<div class="col-md-2 col-md-offset-5" style="padding-top:80px"><a href="#top"><p><input type="submit" value="Go to top" class="green-sea-flat-button footer-button round-corners"></a>
 			</p></div>	
 		
 	</div>	
