--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 	<!DOCTYPE html>
 <html>
 <head>
-	
+	<title>RunPal</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
 	
@@ -10,7 +11,7 @@
 
 <body>
 
-<div class="col-md-12 header" id="top">	
+<div class="col-md-12 col-xs-12 header" id="top">	
 	<div class="col-md-8 center">
 		<div class="header-wrapper">
 			<h1>RunPal</h1>
