--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<!-- <div class="content-container">
-	<div class="container"> -->
+	<div class="content-container">	
+
 <div class="col-md-12 col-xl-12 col-xs-12 header" id="top">	
 	<div class="col-md-8 center">
 		<div class="header-wrapper">
@@ -87,8 +87,8 @@
 			</p></div>	
 		
 	</div>	
-<!-- </div>
-</div> -->
+
+</div>
 </body>
 
 </html>
