--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 				<p>Now there are tons of services out there that lets you track your runs, but exporting that data-so you can lend it to me-demands a little bit of work. I've included guides to the most popular services here. If you should have any questions abouth any of the methods don't hestitate to <a href="mailto:sprint@runpal.org">contact me</a>.	
 		</div>	
 
-	<div id="upload" class="uploadform section col-md-4 col-md-offset-1 round-corners">		
+	<div id="upload" class="uploadform section col-md-4 col-md-offset-1 round-corners">	
+		<h4>Upload your files</h4>	
 				<ul>
 				<li>	<p><a href="#tapiriik">Submit data from RunKeeper, Carmin Connect and more</a></p></li>
 				<li>	<p><a href="#nike">Submit data from Nike+</a><br></p></li>
