--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<ul>
 				<li>	<p><a href="#tapiriik">Submit data from RunKeeper, Carmin Connect and more</a></p></li>
 				<li>	<p><a href="#nike">Submit data from Nike+</a><br></p></li>
-				<li>	<p><a href="#rungap">Submit data from Endmomondo and several other services</a></p></li>
+				<li>	<p><a href="#rungap">Submit data from Endmomondo, Runtastic and several other services</a></p></li>
 				</ul>
 				<p>After exporting your data with the help of the guides, please upload using the upload form below. Thanks a lot for participating!</p>
 				<div class="round-corners file-finder">	
@@ -86,8 +86,8 @@
 </div>	
 <div class="section-wrapper">		
 	<div class="row section option3 col-md-12">
-		<div class="section-header col-md-offset-1"><h3 id="rungap">Submit from Endomondo and several other services</h3></div>
-				<div class="col-md-5 col-md-offset-1"><p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from 13 services including Endomondo, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p></div>
+		<div class="section-header col-md-offset-1"><h3 id="rungap">Submit from Endomondo, Runtastic and several other services</h3></div>
+				<div class="col-md-5 col-md-offset-1"><p>Like many other services Endomondo doesn't offer a bulk export feature natively. To actually export your data (if not done one by one from the Endomondo website) the only way I've found is to use the iOS app <a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="blank">Run Gap</a>. Run Gap lets you sync your data from Garmin, Endomondo, RunKeeper, Strava, Runtastic, Polar, Suunto, Adidas, Magellan, Nike+ and more, and from the app you can then export the data to dropbox. Just choose the services you want to sync and then go to "Share & Export" and choose dropbox. Run Gap will then create a folder in the Apps folder in your Dropbox, with the exported rundata. After downloading the files <a href="#upload">upload your upload files</a>. If it's not possible to choose several files (Internet Explorer) please zip and upload that .zip file.</p></div>
 				<div class="col-md-5"><a href="https://itunes.apple.com/dk/app/rungap-workout-tracker/id534460198?mt=8" target="_blank"><img src="assets/rungap.jpg" class="img-responsive" alt="Responsive Image"></a></div>
 			
 	</div>
