Copy update and added Twitter account link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>	
 
 				<h3>Let's run together</h3>
-				<h4><p>RunPal is a project aiming at exploring how to utilise run data in a new way.</p> <p>The focus is on the social experience running can be and how to help people to experience that.</p></h4>
+				<h4><p>RunPal is a design anthropology project aiming at exploring how to utilise run data in a new way.</p> <p>The focus is on the social experience running can be and how to help people experience that.</p></h4>
 	</div>	
 </div>			
 <div class="section-wrapper">	
@@ -37,7 +37,7 @@
 				<div class="col-md-5 col-md-offset-1">
 				<p>As part of the research I'm hoping to collect a lot of run data. The reason this data is interesting for me is that I want to discover patterns and habits for runners, as I believe knowing this can help determine how to help people engage in social running.</p>
 				<p>You can participate in my research by sharing your run data with me. I'm interested in data from runners of all kind no matter if you hit the streets or trails everyday in your flash gear or if running is somewhat of a coincidence for you. I will of course keep all your data totally anonymous and not share it with anyone, this is only for test purposes.</p>
-				<p>Now there are tons of services out there that lets you track your runs, but exporting that data-so you can lend it to me-demands a little bit of work. I've included guides to the most popular services here. If you should have any questions abouth any of the methods don't hestitate to <a href="mailto:sprint@runpal.org">contact me</a>.	
+				<p>Now there are tons of services out there that lets you track your runs, but exporting that data-so you can lend it to me-demands a little bit of work. I've included guides to the most popular services here. If you should have any questions abouth any of the methods don't hestitate to <a href="mailto:sprint@runpal.org">contact me</a>. If you're interested in updates about the project follow my updates on <a href="https://twitter.com/RUNPAL_SPRINT">twitter</a>.	
 		</div>	
 
 	<div id="upload" class="uploadform section col-md-4 col-md-offset-1 round-corners">	
