Fixed radio buttons states

--- a/runpal.html
+++ b/runpal.html
@@ -42,21 +42,11 @@
 </div>
 <div class="col-md-12 section-wrapper2 center">
 <h3 class="center">Gender?</h1>
-		<div class="radio">
-    <label>
-      <input type="radio"> Male
-    </label>
-		</div>
-    <div class="radio">
-    <label>
-      <input type="radio"> Female
-    </label>
-    	</div>
-     <div class="radio">
-    <label>
-      <input type="radio"> Neither
-    </label>
-    	</div>
+	<form action="">
+		<input type="radio" name="sex" value="male">Male<br>
+		<input type="radio" name="sex" value="female">Female<br>
+		<input type="radio" name="sex" value="female">Neither
+</form>
   </div>
 </form>
 <div class="col-md-12 section-wrapper2 center">
@@ -135,41 +125,20 @@
 
 <div class="col-md-12 section-wrapper2 center">
 	<h3 class="center">Which pace do you prefer?</h3>
-	<div class="radio">
-    <label>
-      <input type="radio"> Less than 4:30 min/km
-    </label>
-		</div>
-    <div class="radio">
-    <label>
-      <input type="radio"> Less than 5:30 min/km
-    </label>
-    	</div>
-     <div class="radio"> 
-    <label>
-      <input type="radio"> More than 5:30 min/km
-    </label>
-    	</div>
-
+	<form action="">
+		<input type="radio" name="sex" value="pace1">Less than 4:30 min/km<br>
+		<input type="radio" name="sex" value="pace2">Less than 5:30 min/km<br> 
+		<input type="radio" name="sex" value="pace3">More than 5:30 min/km<br>   
+	</form>
 </div>
 
 <div class="col-md-12 section-wrapper2 center">
 	<h3 class="center">Which distance do you prefer?</h3>
-	<div class="radio">
-    <label>
-      <input type="radio"> Less than 5 km
-    </label>
-		</div>
-    <div class="radio">
-    <label>
-      <input type="radio"> Less than 10 km
-    </label>
-    	</div>
-     <div class="radio"> 
-    <label>
-      <input type="radio"> More than 10 km
-    </label>
-    	</div>
+	<form action="">
+		<input type="radio" name="sex" value="dist1">Less than 5 km<br>
+		<input type="radio" name="sex" value="dist2">Less than 10 km<br> 
+		<input type="radio" name="sex" value="dist3">More than 10 km<br>   
+	</form>
 
 </div>
 <div class="col-md-12 section-wrapper2">
