Change radio btns to checkboxes

--- a/runpal.html
+++ b/runpal.html
@@ -124,20 +124,44 @@
 </div>
 
 <div class="col-md-12 section-wrapper2 center">
-	<h3 class="center">Which pace do you prefer?</h3>
+	<h3 class="center">Which paces are you interested in running?</h3>
 	<form action="">
-		<input type="radio" name="sex" value="pace1">Less than 4:30 min/km<br>
-		<input type="radio" name="sex" value="pace2">Less than 5:30 min/km<br> 
-		<input type="radio" name="sex" value="pace3">More than 5:30 min/km<br>   
+		<div class="checkbox">
+    <label>
+      <input type="checkbox"> Less than 4:30 min/km
+    </label>
+    </div>  
+    <div class="checkbox">
+    <label>
+      <input type="checkbox"> Less than 5:30 min/km
+    </label>
+    </div>
+     <div class="checkbox">
+    <label>
+      <input type="checkbox"> More than 5:30 min/km
+    </label>
+    </div>
 	</form>
 </div>
 
 <div class="col-md-12 section-wrapper2 center">
-	<h3 class="center">Which distance do you prefer?</h3>
+	<h3 class="center">Which distances are you interested in running?</h3>
 	<form action="">
-		<input type="radio" name="sex" value="dist1">Less than 5 km<br>
-		<input type="radio" name="sex" value="dist2">Less than 10 km<br> 
-		<input type="radio" name="sex" value="dist3">More than 10 km<br>   
+		  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Less than 5 km
+    </label>
+    </div>  
+    <div class="checkbox">
+    <label>
+      <input type="checkbox"> Less than 10 km
+    </label>
+    </div>
+     <div class="checkbox">
+    <label>
+      <input type="checkbox"> More than 10 km
+    </label>
+    </div>
 	</form>
 
 </div>
