--- a/runpal.html
+++ b/runpal.html
@@ -45,12 +45,11 @@
 	<form action="">
 		<input type="radio" name="sex" value="male">Male<br>
 		<input type="radio" name="sex" value="female">Female<br>
-		<input type="radio" name="sex" value="female">Neither
 </form>
   </div>
 </form>
 <div class="col-md-12 section-wrapper2 center">
-		<h3 class="center">Input your running pattern</h1>
+		<h3 class="center">Which days do you want to run?</h1>
 		<div class="checkbox">
     <label>
       <input type="checkbox"> Mon
