--- a/runpal.html
+++ b/runpal.html
@@ -19,10 +19,11 @@
 <div class="content-container">	
 <body>
 	<div class="col-md-12 col-xl-12 col-xs-12 header" id="top">
-		<h1 class="header center">Input your data to find a Run Pal near you</h1>
+		<h1 class="center header">Input your data to find a Run Pal near you</h1>
 	</div>
 
-<div class="col-md-12 section-wrapper2 center">
+<form method="post" action="input.php">
+<div class="col-md-6 section-wrapper2 center">
 	<h3 class="center">Who are you?</h1>
 		<form class="form-inline" role="form">
   <div class="form-group">
@@ -31,7 +32,7 @@
   </div>
 </form>
 </div>
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 <h3 class="center">What's your age?</h1>
 		<form class="form-inline" role="form">
   <div class="form-group">
@@ -40,7 +41,7 @@
   </div>
 </form>
 </div>
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 <h3 class="center">Gender?</h1>
 	<form action="">
 		<input type="radio" name="sex" value="male">Male<br>
@@ -48,7 +49,7 @@
 </form>
   </div>
 </form>
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 		<h3 class="center">Which days do you want to run?</h1>
 		<div class="checkbox">
     <label>
@@ -86,33 +87,35 @@
     </label>
     	</div>
 </div>
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 	<h3 class="center">Between</h1>
 		
-		<div class="dropdown">
+<div class="dropdown">
   <button class="btn dropdown-toggle" type="button" id="dropdownTime1" data-toggle="dropdown">
     Time<span class="caret"></span>
   </button>
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownTime1">
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-  </ul>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownTime1">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+    </ul>           
 </div>
 <p>and</p>
+
 <div class="dropdown">
   <button class="btn dropdown-toggle" type="button" id="dropdownTime2" data-toggle="dropdown">
     Time<span class="caret"></span>
   </button>
-  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownTime2">
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-  </ul>
-</div>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownTime2">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+    </ul>
 </div>
 
-<div class="col-md-12 section-wrapper2 center">
+</div>
+
+<div class="col-md-6 section-wrapper2 center">
 	<h3 class="center">Starting from</h3>
 		<form class="form-inline" role="form">
   <div class="form-group">
@@ -122,7 +125,7 @@
 	</form>
 </div>
 
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 	<h3 class="center">Which paces are you interested in running?</h3>
 	<form action="">
 		<div class="checkbox">
@@ -143,7 +146,7 @@
 	</form>
 </div>
 
-<div class="col-md-12 section-wrapper2 center">
+<div class="col-md-6 section-wrapper2 center">
 	<h3 class="center">Which distances are you interested in running?</h3>
 	<form action="">
 		  <div class="checkbox">
@@ -162,11 +165,11 @@
     </label>
     </div>
 	</form>
-
+</form>
 </div>
-<div class="col-md-12 section-wrapper2">
+<div class="col-md-6 section-wrapper2 center">
 <div class="button">
-	<button type="button center" class="btn btn-default"><h3>Find Run Pals</h3></button>
+	<button type="button" class="col-xs-12 btn btn-default" input type="submit" name="submit" value="Sent"><h3>Find Run Pals</h3></button>
 </div>
 </div>
 
