--- a/runpal1.html
+++ b/runpal1.html
@@ -8,6 +8,9 @@
   <script src="js/bootstrap.js"></script>
 	
 <title>RunPal</title>
+
+  <!-- GA -->
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,63 +23,121 @@
 </script></head>
 <div class="content-container">	
 
+  <!-- Header -->
+
 <body>
   <div class="col-md-12 col-xl-12 col-xs-12 header" id="top">
-    <h1 class="center header">Input your data to find a Run Pal near you</h1>
+    <h1 class="center">Input your data to find a Run Pal near you</h1>
   </div>
    
+  <!-- start form -->
+
 	<form action="insert.php" method="post">
-    
-  <div class="col-md-6 section-wrapper2 center">
+  
+  <!-- name -->
+
+  <div class="col-md-12 section-wrapper2 center">
     <h3>What's your name?</h3> 
-    <input type="text" name="name">
+    <input class="form-control" type="text" name="name" placeholder="enter name" required>
   </div>
-  <div class="col-md-6 section-wrapper2 center">
+
+  <!-- age -->
+
+  <div class="col-md-12 section-wrapper2 center">
     <h3>What's your age?</h3> 
-    <input type="number" name="age">
+    <input class="form-control" type="number" name="age" placeholder="enter age">
   </div>  
-  <div class="col-md-6 section-wrapper2 center">
+
+   <!-- e-mail -->
+
+  <div class="col-md-12 section-wrapper2 center">
+    <h3>What's your e-mail address?</h3> 
+    <p>Your e-mail address will be used to contact you about possible Run Pals</p>
+    <input class="form-control" type="email" name="age" placeholder="enter e-mail address">
+  </div> 
+
+  <!-- Sex -->
+  
+  <div class="col-md-12 section-wrapper2 center">
     <h3>Gender?</h3> 
     <input type="radio" name="sex" value="male"> Male
     <input type="radio" name="sex" value="female"> Female
     <br>
   </div>  
-  <div class="col-md-6 section-wrapper2 center">
+
+   <!-- day -->
+  
+  <div class="col-md-12 section-wrapper2 center">
     <h3>Which days do you like to run?</h3>
-    <input type="checkbox" name="day" value="mon"> Mon <br>
-    <input type="checkbox" name="day" value="tue"> Tue <br>
-    <input type="checkbox" name="day" value="wed"> Wed <br>
-    <input type="checkbox" name="day" value="thu"> Thu <br>
-    <input type="checkbox" name="day" value="fri"> Fri <br>
-    <input type="checkbox" name="day" value="sat"> Sat <br>
-    <input type="checkbox" name="day" value="sun"> Sun 
+    <input type="checkbox" name="day1" value="1"> Monday <br>
+    <input type="checkbox" name="day2" value="1"> Tuesday <br>
+    <input type="checkbox" name="day3" value="1"> Wednesday <br>
+    <input type="checkbox" name="day4" value="1"> Thursday <br>
+    <input type="checkbox" name="day5" value="1"> Friday <br>
+    <input type="checkbox" name="day6" value="1"> Saturday <br>
+    <input type="checkbox" name="day7" value="1"> Sunday 
   </div>
-  <div class="col-md-6 section-wrapper2 center">
+
+  <!-- time1 and time2 -->
+  
+  <div class="col-md-12 section-wrapper2 center">
     <h3>Between </h3>
-    <input type="text" name="time1" placeholder="hh:mm">
+    <input class="form-control" type="text" name="time1" placeholder="hh:mm">
     and 
-    <input type="text" name="time2" placeholder="hh:mm"><br>
+    <input class="form-control" type="text" name="time2" placeholder="hh:mm"><br>
   </div>
-  <div class="col-md-6 section-wrapper2 center">  
-    <h3>Starting from</h3> 
-    <input type="text" name="zip" placeholder="enter zip"><br>
+ 
+  <!-- city -->
+
+  <div class="col-md-12 section-wrapper2 center" required>  
+    <h3>In which city?</h3> 
+    <input class="form-control" type="text" name="city" placeholder="enter city"><br>
   </div>
-  <div class="col-md-6 section-wrapper2 center">
+
+  <!-- zip -->
+
+  <div class="col-md-12 section-wrapper2 center">  
+    <h3>Where do you begin?</h3> 
+    <input class="form-control" type="text" name="zip" placeholder="enter zip"><br>
+  </div>
+ 
+  <!-- pace -->
+
+  <div class="col-md-12 section-wrapper2 center">
     <h3>Which paces are you interested in running?</h3>
-    <input type="checkbox" name="pace" value="1"> Less than 4:30 km <br>
-    <input type="checkbox" name="pace" value="2"> Less than 5:30 km <br>
-    <input type="checkbox" name="pace" value="3"> More than 5:30 km
+    <input type="checkbox" name="pace1" value="1"> Less than 4:30 min/km <br>
+    <input type="checkbox" name="pace2" value="1"> Less than 5:30 min/km <br>
+    <input type="checkbox" name="pace3" value="1"> More than 5:30 m/km
   </div>
-  <div class="col-md-6 section-wrapper2 center">
+ 
+  <!-- distance -->
+
+  <div class="col-md-12 section-wrapper2 center">
     <br><h3>Which distances are you interested in running?</h3>
-    <input type="checkbox" name="distance" value="1"> Less than 5 km <br>
-    <input type="checkbox" name="distance" value="2"> Less than 10 km <br>
-    <input type="checkbox" name="distance" value="3"> More than 10 km
+    <input type="checkbox" name="dist1" value="1"> Less than 5 km <br>
+    <input type="checkbox" name="dist2" value="1"> Less than 10 km <br>
+    <input type="checkbox" name="dist3" value="1"> More than 10 km
   </div>
+
 <br>
-<div class="col-md-6 section-wrapper2 center">
-<button input type="submit"><h2>Find Run Pals</h2></button> 
+
+ <!-- info -->
+
+  <div class="col-md-12 section-wrapper2 center">  
+    <h3>Three things you would like to know about your running partner?</h3> 
+    <input class="form-control" type="text" name="info1" placeholder="enter subject"><br>
+    <input class="form-control" type="text" name="info2" placeholder="enter subject"><br>
+    <input class="form-control" type="text" name="info3" placeholder="enter subject"><br>
+  </div>
+
+  <!-- submit -->
+
+<div class="col-md-12 section-wrapper2 center">
+<a href="runpal2.html"><button class="col-xs-12" input type="submit"><h2>Find Run Pals</h2></button></a>
 </div>
 </form>
+
+  <!-- end form -->
+
 </body>
 </div>
