Page 2 / feedback / styling

--- a/runpal1.html
+++ b/runpal1.html
@@ -133,7 +133,7 @@
   <!-- submit -->
 
 <div class="col-md-12 section-wrapper2 center">
-<a href="runpal2.html"><button class="col-xs-12" input type="submit"><h2>Find Run Pals</h2></button></a>
+<a href="runpal2.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" input type="submit"><h2>Find Run Pals</h2></button></a>
 </div>
 </form>
 
