--- a/runpal1.html
+++ b/runpal1.html
@@ -2,6 +2,7 @@
 <head>
 	<title>RunPal</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/gif" href="assets/favicon.gif">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -53,7 +54,7 @@
   <div class="col-md-12 section-wrapper2 center">
     <h3>What's your e-mail address?</h3> 
     <p>Your e-mail address will be used to contact you about possible Run Pals</p>
-    <input class="form-control" type="email" name="age" placeholder="enter e-mail address">
+    <input class="form-control" type="email" name="email" placeholder="enter e-mail address">
   </div> 
 
   <!-- Sex -->
@@ -133,7 +134,7 @@
   <!-- submit -->
 
 <div class="col-md-12 section-wrapper2 center">
-<a href="runpal2.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" input type="submit"><h2>Find Run Pals</h2></button></a>
+<button class="col-xs-12 btn btn-primary btn-lg" input type="submit"><h2>Find Run Pals</h2></button>
 </div>
 </form>
 
