--- a/runpal2.html
+++ b/runpal2.html
@@ -2,6 +2,7 @@
 <head>
 	<title>RunPal</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/gif" href="assets/favicon.gif">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -110,7 +111,7 @@
 <form action="insert2.php" method="post">
  
   <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
-    <h3>What do you think about the Run Pal concept?</h3> 
+    <h3>What do you think about <br> the Run Pal concept?</h3> 
     <input class="form-control" type="text" textarea rows="10" name="feedback" placeholder="enter your feedback">
   <br>
 
