--- a/runpal3.html
+++ b/runpal3.html
@@ -27,21 +27,11 @@
   <!-- Header -->
 
 <body>
-  <div class=""> 
   <div class="col-md-12 col-xl-12 col-xs-12 header" id="top">
-    <h1 class="center">Welcome to Run Pal</h1>
-    <h3 class="center">Find a Run Pal near you</h3>
-  </div>
+    <h1 class="center">Thanks for submitting your feedback!</h1>
   </div>
 
-  <div class="section-wrapper2 col-md-6 col-sm-6 col-xs-12"> 
-      <h3>What if running together could be easier?</h3>
-        
-        <p>Run Pal is a service making it easier for people to find Run Pals and start running together. Input your running preferences to create a profile and get matched with other runners. As Run Pal is still under development we would love it if you give your feedback after trying the service. Should you have any questions about the project don't hestitate to <a href="mailto:sprint@runpal.org">contact us</a>. If you're interested in updates about the project follow us on <a href="https://twitter.com/RUNPAL_SPRINT">twitter</a>.      
-  </div>  
-  
-  <div class="section-wrapper2 col-md-6 col-sm-6 col-xs-12"> 
-        <a href="/runpal1.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" style="margin-top:58px"><h2>Let me try!</h2></button></a>
-      </div> 
-  </div>  
+  <div class="section-wrapper2 col-md-6 col-sm-6 col-xs-12">
+    <a href="/index.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" style="margin-top:58px"><h2>Back to start</h2></button></a>
+  </div>
 </body>
