--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="section-wrapper2 col-md-6 col-sm-6 col-xs-12"> 
-      <h3>What if running together could be easier?</h3>
+      <h3>What if running was different?</h3>
         
         <p>Run Pal is a service making it easier for people to find Run Pals and start running together. Input your running preferences to create a profile and get matched with other runners. As Run Pal is still under development we would love it if you give your feedback after trying the service. Should you have any questions about the project don't hestitate to <a href="mailto:sprint@runpal.org">contact us</a>. If you're interested in updates about the project follow us on <a href="https://twitter.com/RUNPAL_SPRINT">twitter</a>.      
   </div>  
