added "goal" field to submit form

--- a/runpal1.html
+++ b/runpal1.html
@@ -57,6 +57,15 @@
     <input class="form-control" type="email" name="email" placeholder="enter e-mail address">
   </div> 
 
+  <!-- Updates yes/no -->
+  
+<!--   <div class="col-md-12 section-wrapper2 center">
+    <h3>Do you want to receive updates about the Run Pal project?</h3> 
+    <input type="radio" name="updates" value="yes"> Yes
+    <input type="radio" name="updates" value="no"> No
+    <br>
+  </div>  
+ -->
   <!-- Sex -->
   
   <div class="col-md-12 section-wrapper2 center">
@@ -121,6 +130,13 @@
   </div>
 
 <br>
+
+<!-- goals -->
+
+  <div class="col-md-12 section-wrapper2 center">  
+    <h3>What are your reason for running?</h3> 
+    <input class="form-control" type="text" name="goal" placeholder="enter free text"><br>
+  </div>
 
  <!-- info -->
 
