--- a/runpal2.html
+++ b/runpal2.html
@@ -85,7 +85,7 @@
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
       <h3>Mody</h3>
       <img class="img-responsive" src="assets/mody_300.jpg">
-        <p>I begin in Berlin 12051 and run usually every tuesday and thursday. Normally we i go less than 10 km. in more than 5:30 min/km.</p>
+        <p>I begin in Berlin 12051 and run usually every tuesday and thursday. Normally I go less than 10 km. in more than 5:30 min/km.</p>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Mody! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
@@ -103,7 +103,7 @@
   <div class="section-wrapper2 col-md-8 col-xl-4 col-xs-12">
     <h3>Run Pal Map</h3>
     <!-- <div class="img-responsive" id="map_canvas"></div> -->
-    <iframe class="img-responsive" id="map_canvas" src="https://mapsengine.google.com/map/embed?mid=zGd0FbbyuoJo.kvTEg10XSBMo" width="750" ></iframe>
+    <iframe class="img-responsive" id="map_canvas" src="https://mapsengine.google.com/map/embed?mid=zGd0FbbyuoJo.kvTEg10XSBMo" width="750"></iframe>
   </div>
 
   <!-- questionaire-->  
