run pal cph profiles and image + <ul> listing.

--- a/runpal2.html
+++ b/runpal2.html
@@ -67,7 +67,7 @@
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
     <h3>Lisa</h3>
        <img class="img-responsive" src="assets/lisa_300.jpg">
-        <p>I begin in Berlin 10999 and run mon, wed and sat morning. Normally I go more less than 5 km. in more than 5:30 min/km.</p>
+        <p>I begin in Berlin 10999 and run mon, wed and sat morning. Normally I go less than 5 km. in more than 5:30 min/km.</p>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Lisa! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
