--- a/runpalscph.html
+++ b/runpalscph.html
@@ -49,17 +49,25 @@
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
       <h3>Matias</h3>
       <img class="img-responsive" src="assets/matias_300.jpg">
-        <p>I usually begin in Berlin 10405 and run mon, wed and sat evenings. Normally I go more than 10 km in less than 5:30 min/km.</p>
+        <ul>
+          <li>Begins in Copenhagen 1721</li> 
+          <li>Mon, wed and sat evenings</li> 
+          <li>More than 10 km in less than 5:30 min/km.</li>
+        </ul>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Matias! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
   <!-- Match2-->
 
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
-      <h3>Run Pack (group)</h3>
-      <img class="img-responsive" src="assets/runpack_300.jpg">
-        <p>We begin in Berlin 10119 and run every tuesday and thursday. Normally we go more than 10 km in in all tempos.</p>
-      <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Run Pack! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
+      <h3>NBRO (Group)</h3>
+      <img class="img-responsive" src="assets/nbro_300.jpg">
+       <ul>
+          <li>Begin in Copenhagen 2200 at Kaffesalonen</li> 
+          <li>Everyday except sunday</li> 
+          <li>All distances in all tempos</li>
+        </ul>
+      <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey NBRO! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
   <!-- Match3-->  
@@ -67,34 +75,50 @@
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
     <h3>Lisa</h3>
        <img class="img-responsive" src="assets/lisa_300.jpg">
-        <p>I begin in Berlin 10999 and run mon, wed and sat morning. Normally I go more less than 5 km. in more than 5:30 min/km.</p>
+        <ul>
+          <li>Begins in Copenhagen 2300</li> 
+          <li>Mon, wed and sat morning</li> 
+          <li>Less then 5 km in more than 5:30 min/km.</li>
+        </ul>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Lisa! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
      <!-- Match4-->
 
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
-      <h3>Felix</h3>
-      <img class="img-responsive" src="assets/felix_300.jpg">
-        <p>I usually begin in Berlin 10437 and run mon, wed and sat evenings. Normally I go less than 10 km. in less than 4:30 min/km.</p>
-      <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Felix! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
+      <h3>Mikkel</h3>
+      <img class="img-responsive" src="assets/mikkel_300.jpg">
+        <ul>
+          <li>Begins in Copenhagen 2200</li> 
+          <li>All evenings except friday</li> 
+          <li>More than 10 km in less than 4:30 min/km.</li>
+        </ul>
+      <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Mikkel! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
   <!-- Match5-->
 
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
-      <h3>Mody</h3>
-      <img class="img-responsive" src="assets/mody_300.jpg">
-        <p>I begin in Berlin 12051 and run usually every tuesday and thursday. Normally I go less than 10 km. in more than 5:30 min/km.</p>
+      <h3>Thomas</h3>
+      <img class="img-responsive" src="assets/thomas_300.jpg">
+        <ul>
+          <li>Begins in Copenhagen 1360</li> 
+          <li>All afternoons</li> 
+          <li>Less than 10 km in more than 5:30 min/km.</li>
+        </ul>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Mody! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
   <!-- Match6-->  
     
     <div class="section-wrapper2 col-md-4 col-xl-4 col-xs-12">
-    <h3>Nadja</h3>
-       <img class="img-responsive" src="assets/nadja_300.jpg">
-        <p>I begin in Berlin 10119 and run mon, wed and sat morning. Normally I go less than 10 km. in more than 5:30 min/km.</p>
+    <h3>Tina</h3>
+       <img class="img-responsive" src="assets/tina_300.jpg">
+        <ul>
+          <li>Begins in Copenhagen 1610</li> 
+          <li>Monday and wednesday evening</li> 
+          <li>Less than 10 km in more than 5:30 min/km.</li>
+        </ul>
       <a href="mailto:sprint@runpal.org?subject=Let's run together&body=Hey Nadja! Our profiles on Run Pal match - let's go for a run together!"><button class="btn btn-primary btn-sm">Contact</button></a>
     </div>
 
@@ -103,7 +127,7 @@
   <div class="section-wrapper2 col-md-8 col-xl-4 col-xs-12">
     <h3>Run Pal Map</h3>
     <!-- <div class="img-responsive" id="map_canvas"></div> -->
-    <iframe class="img-responsive" id="map_canvas" src="https://mapsengine.google.com/map/embed?mid=zGd0FbbyuoJo.kvTEg10XSBMo" width="750"></iframe>
+   <iframe class="img-responsive" id="map_canvas" src="https://mapsengine.google.com/map/embed?mid=zGd0FbbyuoJo.kcxAjKmm0yyU" width="750"></iframe>
   </div>
 
   <!-- questionaire-->  
