--- a/runpal1.html
+++ b/runpal1.html
@@ -29,8 +29,12 @@
 <body>
   <div class="col-md-12 col-xl-12 col-xs-12 header" id="top">
     <h1 class="center">Input your data to find a Run Pal near you</h1>
+     <!-- Jump to results -->
+   <a href="runpal_results.php"><button class="btn btn-success btn-sm">I already have a profile</button></a>
   </div>
    
+ 
+
   <!-- start form -->
 
   <form action="insert.php" method="post">
