inserting profile picture or male/female placeholder

--- a/runpal3.html
+++ b/runpal3.html
@@ -32,6 +32,6 @@
   </div>
 
   <div class="section-wrapper2 col-md-6 col-sm-6 col-xs-12">
-    <a href="/index.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" style="margin-top:58px"><h2>Back to start</h2></button></a>
+    <a href="index.html"><button type="button" class="col-xs-12 btn btn-primary btn-lg" style="margin-top:58px"><h2>Back to start</h2></button></a>
   </div>
 </body>
