find group placeholder if gender not male or female

--- a/group.html
+++ b/group.html
@@ -36,8 +36,9 @@
  
   <div class="col-md-12 section-wrapper2 center">
     <h3>Genders in group?</h3>
-    <input type="checkbox" name="sex" value="male"> Male
+    <input type="checkbox" name="sex" value="male"> Male </input>
     <input type="checkbox" name="sex" value="female"> Female
+    <input type="checkbox" name="sex" value="both"> Both
     <br>
   </div> 
 
@@ -89,7 +90,7 @@
   <!-- distance -->
 
   <div class="col-md-12 section-wrapper2 center">
-    <br><h3>Which distancesdo you run?</h3>
+    <br><h3>Which distances do you run?</h3>
     <input type="checkbox" name="dist1" value="1"> Less than 5 km <br>
     <input type="checkbox" name="dist2" value="1"> Less than 10 km <br>
     <input type="checkbox" name="dist3" value="1"> More than 10 km
