--- a/prototype3/index.html
+++ b/prototype3/index.html
@@ -26,7 +26,11 @@ mixpanel.init("a42e3e2c1e9beacbcec8272f06ac3641");</script><!-- end Mixpanel -->
   ga('create', 'UA-47568451-1', 'runpal.org');
   ga('send', 'pageview');
 
-</script></head>
+</script>
+
+<script>!function(e,o,n){window.HSCW=o,window.HS=n,n.beacon=n.beacon||{};var t=n.beacon;t.userConfig={},t.readyQueue=[],t.config=function(e){this.userConfig=e},t.ready=function(e){this.readyQueue.push(e)},o.config={docs:{enabled:!0,baseUrl:"//maguru.helpscoutdocs.com/"},contact:{enabled:!0,formId:"1f5c3fa5-d8ad-11e6-8789-0a5fecc78a4d"}};var r=e.getElementsByTagName("script")[0],c=e.createElement("script");c.type="text/javascript",c.async=!0,c.src="https://djtflbt20bdde.cloudfront.net/",r.parentNode.insertBefore(c,r)}(document,window.HSCW||{},window.HS||{});</script>
+
+</head>
 <div class="content-container">	
 
   <!-- Header -->
